--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
+
+
+.gradle/*
 */build/*
 */bin/*
-.gradle/*
+*gradle/*
 *.jar
 *.class
 *.bin
 *.lock
-*.mtl
+mcinterfaceforge1122/*
+mcinterfaceforge1165/*
+my_own_readme.md
+*gradle.*
+*gradlew*
+mccore/build.gradle
