--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ mcinterfaceforge1165/*
 my_own_readme.md
 *gradle.*
 *gradlew*
-mccore/build.gradle
+1-12-2_1-16-5_dictionnary.json
+1-12-2_1-16-5_ID_transformer.py
