--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.gradle/*
 */build/*
 */bin/*
 *gradle/*
@@ -11,5 +10,8 @@ mcinterfaceforge1165/*
 my_own_readme.md
 *gradle.*
 *gradlew*
+mccore/build.gradle
+build/*
+.vscode/settings.json
 1-12-2_1-16-5_dictionnary.json
 1-12-2_1-16-5_ID_transformer.py
